syntax = "proto3";

option go_package = "./protocol";
package protocol;

message TPutRequest {
    uint64 request_id = 1;
    string key = 2;
    bytes value = 3;
}

message TPutResponse {
    uint64 request_id = 1;
}

message TGetRequest {
    uint64 request_id = 1;
    string key = 2;
}

message TGetResponse {
    uint64 request_id = 1;
    bytes value = 2;
}
